tests/Fase2-Semantic/error/t12-using_a_var_as_a_method.ctds
class main {
	integer x;

	integer add(){
		x = x+1;
		return x;
	}

	void notmain(){
		x();
		add();
	}
	
}
